--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vidly-api-node",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose",
-    "start": "node index.js"
+    "start": "node seed.js && node index.js"
   },
   "engines": {
     "node": "18.16.1"
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
